--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -23,6 +23,8 @@
                     <td>
                         <a class="btn btn-outline-primary" href="{{ path('app_categorie_show', {'id': categorie.id}) }}">Voir</a>
                         <a class="btn btn-outline-secondary" href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
+                        <a href="{{ path('app_categorie_delete', {'id': categorie.id}) }}" data-delete data-token="{{ csrf_token('delete' ~ categorie.id )}}"><img src="/image/sup1.ico"></a>
+
                     </td>
                 </tr>
             {% else %}
