--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -24,24 +24,37 @@
     <div class="alert alert-success" role="alert">{{ message }}</div>
 {% endfor %}
 <!-- Features section-->
-<section class="py-5 border-bottom" id="features">
-    <div class="container px-5 my-5">
-        <div class="row gx-5">
-        {% for categorie in categorie %}
-            <div class="col-lg-4 mb-5 mb-lg-0">
-                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">.</div>
-                <h2 class="h4 fw-bolder">{{ categorie.libelle }}</h2>
-                <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-                <a class="text-decoration-none" href="{{ path('app_tricks_index') }}">
-                    Voir les tricks
-                    <i class="bi bi-arrow-right"></i>
-                </a>
-            </div>
-            {% endfor %}
 
+<section class="py-5 border-bottom" id="features" data-tricks="">
+    <div class="container">
+        <div class="row">
+            <div class="card">
+                <h1 class="heading mb-3">Catégorie des tricks</h1>
+                <div class="box-container mb-3">
+                {% for categorie in categorie %}
+                    <div class="box">
+                        <div class="card-header">
+                                {# On ajoute un lien permettant de supprimer une image (sera géré en Ajax) #}
+                            <a href="{{ path('app_categorie_delete', {'id': categorie.id}) }}" data-delete data-token="{{ csrf_token('delete' ~ categorie.id )}}"><img src="/image/sup1.ico"></a>
+                            <a href="{{ path('app_categorie_edit', {'id': categorie.id}) }}"><img src="/image/update.ico"></a>
+                        </div>
+                        <div class="card-container">
+                            <h3>{{ categorie.libelle }}</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, adipisci!</p>
+                            <a class="text-decoration-none" href="{{ path('app_tricks_index') }}">
+                                Voir les tricks
+                                <i class="bi bi-arrow-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                {% endfor %}
+                </div>
+            </div>
         </div>
+        <a class="btn btn-outline-secondary" id="load-more">load more</a>
     </div>
 </section>
+
 <!-- Testimonials section-->
 <section class="py-5 border-bottom">
     <div class="container px-5 my-5 px-5">
