--- a/templates/media/show.html.twig
+++ b/templates/media/show.html.twig
@@ -13,7 +13,7 @@
             </tr>
             <tr>
                 <th>NomImage</th>
-                <td>{{ media.mediaImage }}</td>
+                <td>{{ media.image }}</td>
             </tr>
         </tbody>
     </table>
