--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,6 @@
 header.masthead {
 
     min-height: 580px;
-    min-width: 1024px;
     /* On indique un redimensionnement proportionnel */
     width: 100%;
     height: 100%;
@@ -40,10 +39,6 @@ header.masthead {
    transition: all .2s linear;
 }
 
-body{
- background-color: #dc143c22; 
-}
-
 .container{
   max-width: 1200px;
   margin: 0 auto;
@@ -52,64 +47,26 @@ body{
 }
 
 .container .heading{
-  font-size: 40px;
-  margin-bottom: 20px;
-  color:#334;
+  font-size: 50px;
+  margin-bottom: 10px;
+  color:rgb(248, 133, 40);
 }
 
-
 .container .box-container .box{
-  background-color: #fff;
-  padding:20px;
-  border-radius: 5px;
-  box-shadow: 0 5px 10px rgba(0,0,0,.2);
+  background-color: #e3f7fb;
+  margin-top: 20px;
+  padding:10px;
+  border-radius: 10px;
   display: none;
 }
 
 .container .box-container .box:nth-child(1),
 .container .box-container .box:nth-child(2),
-.container .box-container .box:nth-child(3){
+.container .box-container .box:nth-child(3),
+.container .box-container .box:nth-child(4),
+.container .box-container .box:nth-child(5),
+.container .box-container .box:nth-child(6){
   display: inline-block;
-}
-
-.container .box-container .box .content p{
-  font-size: 15px;
-  color:#777;
-  line-height: 2;
-  padding:15px 0;
-}
-
-.container .box-container .box .content .btn{
-  display: inline-block;
-  padding:10px 30px;
-  border:1px solid #334;
-  color:#334;
-  font-size: 16px;
-}
-
-.container .box-container .box .content .btn:hover{
-  background-color: crimson;
-  border-color: crimson;
-  color:#fff;
-}
-
-.container .box-container .box .content .icons{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 20px;
-  padding-top: 15px;
-  border-top:1px solid #334;
-}
-
-.container .box-container .box .content .icons span{
-  font-size: 14px;
-  color:#777;
-}
-
-.container .box-container .box .content .icons span i{
-  color:crimson;
-  padding-right: 5px;
 }
 
 #load-more{
@@ -139,10 +96,6 @@ body{
     grid-template-columns: 1fr;
   }
 
-  .container .box-container .box .image{
-    height: 200px;
-  }
-
   .container .box-container .box .content p{
     font-size: 12px;
   }
@@ -151,4 +104,108 @@ body{
     font-size: 12px;
   }
 
+}
+
+.lead {
+  color:rgb(248, 133, 40);
+}
+
+#scrollToTopButton {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 99;
+  font-size: 18px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+
+.custom-icon {
+  font-size: 30px; 
+}
+
+.custom-border {
+  border: 2px solid; 
+}
+
+.media-item {
+  width: 100%;
+  height: 20%;
+}
+.video-item {
+  width: 100%;
+  height: 20%;
+}
+
+.card-header {
+  text-align: right;
+}
+
+#delete-link, #edit-link {
+  display: inline-block;
+  margin: 10px;
+}
+
+.card-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  background-color: rgb(250, 248, 248);
+  padding: 10px;
+  color: #fff;
+  border-radius: 5px;
+}
+
+.card-links {
+  position: absolute;
+  top: 10px; 
+  right: 10px;
+  z-index: 2;
+}
+.link-box {
+  background-color: white;
+  display: inline-block;
+  padding: 5px;
+  border-radius: 5px;
+}
+/* FOOTER MOBILE*/
+#footer-mobile {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f8f2f2;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+}
+
+.taille {
+  height: 150px;
+  object-fit: cover;
+}
+
+/* Masquer le footer pour les écrans plus larges */
+@media (min-width: 768px) {
+  #footer-mobile {
+      display: none;
+  }
+}
+
+.content {
+  display: none; /* Masque le contenu par défaut */
+}
+
+@media (min-width: 768px) {
+  /* Styles pour les écrans plus larges (non mobiles) */
+  .content {
+      display: block; /* Affiche le contenu sur les écrans plus larges */
+  }
 }
