--- a/templates/media/edit.html.twig
+++ b/templates/media/edit.html.twig
@@ -3,11 +3,14 @@
 {% block title %}Edit Media{% endblock %}
 
 {% block body %}
-    <h1>Edit Media</h1>
 
-    {{ include('media/_form.html.twig', {'button_label': 'Update'}) }}
+    <div class="container">
+        <h1>Edit Media</h1>
 
-    <a href="{{ path('app_media_index') }}">back to list</a>
+        {{ include('media/_form.html.twig', {'button_label': 'Update'}) }}
 
-    {{ include('media/_delete_form.html.twig') }}
+        <a href="{{ path('app_media_index') }}">back to list</a>
+
+        {{ include('media/_delete_form.html.twig') }}
+    <div>
 {% endblock %}
