--- a/templates/tricks/_form.html.twig
+++ b/templates/tricks/_form.html.twig
@@ -29,7 +29,19 @@
             'attr':{'class':'form-control'}
         }) }}
     </div>
-    <input type="button" value="+" onclick="masquer_div('a_masquer');" />
+        <input type="button" value="+" onclick="masquer_div('a_masquer');" />
+
+        <div>
+        {{ form_row(form.ajouter, {
+            'attr':{'class':'form-control'}
+        }) }}
+    </div>
+    <div>
+        {{ form_row(form.modifier, {
+            'attr':{'class':'form-control'}
+        }) }}
+    </div>
+
     <div>
         {{ form_row(form.categorie, {
             'attr':{'class':'form-control'}
