--- a/templates/tricks/index.html.twig
+++ b/templates/tricks/index.html.twig
@@ -28,11 +28,11 @@
                             <div class="card-container">
                                 <h3>{{ trick.nom }}
                                     {% if is_granted('ROLE_USER') %}
-                                        <a href="{{ path('app_tricks_edit', {'id': trick.id}) }}"><img src="/image/update.ico"></a>
+                                        <a href="{{ path('app_tricks_edit', {'slug': trick.getSlug}) }}"><img src="/image/update.ico"></a>
                                         {{ include('tricks/_delete_form.html.twig') }}
                                     {% endif %}
                                 </h3>
-                                <a class="text-decoration-none" href="{{ path('app_tricks_show', {'id': trick.id}) }}">
+                            <a class="text-decoration-none" href="{{ path('app_tricks_show', {'slug': trick.getSlug()}) }}">
                                     Voir plus
                                     <i class="bi bi-arrow-right"></i>
                                 </a>
