--- a/templates/tricks/show.html.twig
+++ b/templates/tricks/show.html.twig
@@ -35,7 +35,11 @@
                         {% if is_granted('ROLE_USER') %}
                         <div class="card-body">
                             <a  id="add" href="{{ path('app_media_edit', {'id': media.id}) }}"><img src="/image/update.ico"></a>
-                            <a id="add" href="{{ path('app_media_delete', {'id': media.id}) }}" data-delete data-token="{{ csrf_token('delete' ~ media.id )}}" align="right" no-repeat><img src="/image/sup1.ico"></a>
+                            <form method="post" action="{{ path('app_media_delete', {'id': media.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                <input type="hidden" name="_method" value="DELETE">
+                                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ media.id) }}">
+                                <button class="btn"><img src="/image/sup1.ico"></button>
+                            </form>
                         </div>
                         {% endif %}
                     </div>
